--- a/Map/UserSettings/Search.settings
+++ b/Map/UserSettings/Search.settings
@@ -13,7 +13,7 @@ scopes = {
 	"picker_visibility_flags.075BCD15" = "264"
 	"picker_item_size.075BCD15" = "96"
 	"picker_inspector.075BCD15" = "0"
-	"last_search.66F56946" = "Camera"
+	"last_search.66F56946" = "project setting"
 	"OpenInspectorPreview.66F56946" = "0"
 	"currentGroup.66F56946" = "menu"
 }
@@ -72,6 +72,7 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	"ㄠ"
 	"Camera "
 ]
 searchItemFavorites = [
